# deep-research-agent

./: CONTRIBUTING.md  Dockerfile.agent  README.md  docker-compose.yml  mkdocs.yml  openapi.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build-and-push.yml
deep_research_agent/: __init__.py  __main__.py  __version__.py  agent_config.json  main.py
deep_research_agent/skills/deep-research/: skill.yaml
docs/: index.md  modules.md
tests/: test_main.py
